examples/test/testpolicy114.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy114
  namespace: namespace66
spec:
  podSelector:
    matchLabels:
      key32: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value29
          key27: value15
      podSelector:
        matchLabels:
          key15: value2
          key26: value19
          key49: value21
